--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/jest": "^19.2.4",
+    "@types/lodash": "^4.14.104",
     "@types/node": "^9.4.6",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
@@ -88,5 +89,8 @@
       "\\.snap$",
       "<rootDir>/node_modules/"
     ]
+  },
+  "dependencies": {
+    "lodash": "^4.17.5"
   }
 }
