refactor: Move more code into index.ts

--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
       "js"
     ],
     "coverageReporters": [
-      "json-summary"
+      "json-summary",
+      "lcov"
     ],
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
