ci: Fix semantic release configuration

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "tsc",
     "test": "jest --collectCoverage",
     "prepublish": "npm run build",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "semantic-release": "semantic-release",
     "prettier": "prettier",
     "prettier-write": "npm run prettier -- --parser typescript --no-semi --trailing-comma es5 --write --print-width 120",
     "prettier-project": "npm run prettier-write -- 'src/**/*.{ts,tsx}'",
