--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "commitizen": "^3.1.1",
     "cz-conventional-changelog": "^2.0.0",
     "danger": "9.1.8",
+    "danger-plugin-istanbul-coverage": "^1.6.2",
     "husky": "3.0.4",
     "jest": "^24.8.0",
     "lint-staged": "^9.1.0",
