--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm run test:unit:coverage -- --silent
+          npm test
         env:
           CI: true 
 
